--- a/Index1.html
+++ b/Index1.html
@@ -39,34 +39,36 @@
         <p>Apa yang bisa dibantu?</p>
         <div class="container" id="scrollContainer">
             <div class="box-content">
-                <p>ini content</p>
+                <p>BUAT</p>
+                <h3>STIKER</h3>
+                <a class="btn" href="">Lanjut</a>
             </div>
             <div class="box-content">
-                <p>ini content</p>
+                <p>BUAT</p>
+                <h3>SABLON</h3>
+                <a class="btn" href="">Lanjut</a>
             </div>
             <div class="box-content">
-                <p>ini content</p>
+                <p>BUAT</p>
+                <h3>STAMPEL</h3>
+                <a class="btn" href="">Lanjut</a>
             </div>
             <div class="box-content">
-                <p>ini content</p>
+                <p>BUAT</p>
+                <h3>NOTA</h3>
+                <a class="btn" href="">Lanjut</a>
             </div>
             <div class="box-content">
-                <p>ini content</p>
+                <p>BUAT</p>
+                <h3>BANNER</h3>
+                <a class="btn" href="">Lanjut</a>
             </div>
             <div class="box-content">
-                <p>ini content</p>
-            </div>
-            <div class="box-content">
-                <p>ini content</p>
-            </div>
-            <div class="box-content">
-                <p>ini content</p>
-            </div>
-            <div class="box-content">
-                <p>ini content</p>
-            </div>
-            <div class="box-content">
-                <p>ini content</p>
+                <p>BUAT</p>
+                <h3>HURUF
+                    <br>TIMBUL
+                </h3>
+                <a class="btn" href="">Lanjut</a>
             </div>
         </div>
     </section>
