--- a/Index1.html
+++ b/Index1.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+    <div class="bg"></div>
+
     <header>
         <nav>
             <img class="logo" src="Assets/GHAOS.png" alt="GhaosPrinting">
@@ -69,6 +71,30 @@
                     <br>TIMBUL
                 </h3>
                 <a class="btn" href="">Lanjut</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="loginAs">
+        <h1>Bukan Customer?</h1>
+        <div class="containerLogin">
+            <div class="containerForm">
+                <form class="form" id="employeForm">
+                    <h3>Login Sebagai <span>Karyawan</span></h3>
+                    <input type="email" placeholder="Email/Nama Pengguna">
+                    <input type="password" placeholder="Password">
+                    <button class="submit" type="submit">Masuk</button>
+                    <p>Belum Terdaftar? <a href="">Daftar/Ajukan</a></p>
+                </form>
+            </div>
+            <div class="line">.</div>
+            <div class="containerForm">
+                <form class="form" id="adminForm">
+                    <h3>Login Sebagai <span>Admin</span></h3>
+                    <input type="email" placeholder="Email/Nama Pengguna">
+                    <input type="password" placeholder="Password">
+                    <button class="submit" type="submit">Masuk</button>
+                </form>
             </div>
         </div>
     </section>
