--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,8 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css" />
-	<title>Home</title>
+	<link rel="shortcut icon" href="Assets/LogoGhaos-ContourBlack.png" type="image/png">
+	<title>GhaosPrinting</title>
 </head>
 
 <body>
