--- a/Index1.html
+++ b/Index1.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-    <div class="bg"></div>
 
     <header>
         <nav>
@@ -38,8 +37,10 @@
     </header>
 
     <section class="content">
-        <h1>Halo Selamat Datang</h1>
-        <p>Apa yang bisa dibantu?</p>
+        <div class="containerText">
+            <h1>Halo Selamat Datang</h1>
+            <p>Apa yang bisa dibantu?</p>
+        </div>
         <div class="container" id="scrollContainer">
             <div class="box-content">
                 <p>BUAT</p>
