--- a/Index1.html
+++ b/Index1.html
@@ -16,7 +16,7 @@
 
     <header>
         <nav>
-            <img class="logo" src="Assets/GHAOS.png" alt="GhaosPrinting">
+            <img class="logo" src="Assets/LogoGhaos-ContourWhite.png" alt="GhaosPrinting">
             <div class="nav-box" onclick="toggle()">
                 <div id="nav-strip1"></div>
                 <div id="nav-strip2"></div>
@@ -45,7 +45,7 @@
             <div class="box-content">
                 <p>BUAT</p>
                 <h3>STIKER</h3>
-                <a class="btn" href="">Lanjut</a>
+                <a class="btn" href="Pages/stiker.html">Lanjut</a>
             </div>
             <div class="box-content">
                 <p>BUAT</p>
@@ -100,6 +100,11 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <p>&copy;Ghaos Printing|</p>
+        <p>Punya Keluhan? <a href="">Hubungi Admin</a></p>
+    </footer>
 
     <script src="Dom.js"></script>
 </body>
